// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownInputRow/> should render correctly 1`] = `
<div
  class="input"
  data-handler-id="T0"
  style="opacity: 1;"
>
  <div
    class="inputContainer"
  >
    <div
      class="material-icons dragIndicator dragIndicatorActive"
      data-testid="dropdown-choice-123-handle"
      draggable="true"
    >
      drag_indicator
    </div>
    <div
      class="wrapper"
    >
      <input
        class="input"
        data-resizable="false"
        data-testid="dropdown-choice-123"
        id="dropdown-choice-123"
        name="dropdown-choice-123"
        placeholder="e.g. Shipping issue::Delay"
        type="text"
        value="Test value"
      />
    </div>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-cef1 deleteButton wrapper ghost ui-button-ghost-cef1 ui-button-destructive-cef1"
      data-testid="dropdown-choice-123-remove"
      type="button"
    >
      <span
        class="ui-button-content-cef1"
      >
        <i
          class="material-icons icon"
        >
          clear
        </i>
      </span>
    </button>
  </div>
</div>
`;

exports[`<DropdownInputRow/> should render correctly when validation fails 1`] = `
<div
  class="input"
  data-handler-id="T2"
  style="opacity: 1;"
>
  <div
    class="inputContainer"
  >
    <div
      class="material-icons dragIndicator dragIndicatorActive"
      data-testid="dropdown-choice-123-handle"
      draggable="true"
    >
      drag_indicator
    </div>
    <div
      class="wrapper hasError"
    >
      <input
        class="input"
        data-resizable="false"
        data-testid="dropdown-choice-123"
        id="dropdown-choice-123"
        name="dropdown-choice-123"
        placeholder="e.g. Shipping issue::Delay"
        type="text"
        value="Test value"
      />
    </div>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-cef1 deleteButton wrapper ghost ui-button-ghost-cef1 ui-button-destructive-cef1"
      data-testid="dropdown-choice-123-remove"
      type="button"
    >
      <span
        class="ui-button-content-cef1"
      >
        <i
          class="material-icons icon"
        >
          clear
        </i>
      </span>
    </button>
  </div>
  <div
    class="caption error lastInput"
  >
    Unfortunately there is an error
  </div>
</div>
`;
